# Physio-Deepfake

./: .gitignore  README.md  devenv.nix  flake.nix  pyproject.toml  requirements.txt
docs/: RESEARCH_SUMMARY.md
notebooks/: Physio_Deepfake_Cross_Dataset_Colab.ipynb
results/: ablation_study_results.json  baseline_proper_results.json  cascade_improved_results.json  cascade_results.json  efficientnet_crnn_results.json  enhanced_ml_results.json  feature_importance_analysis.json  graph_consistency_features.npz  hybrid_results.json  learning_curve_features.npz  learning_curve_results.json  physio_ensemble_results.json  physiological_ensemble_v1_results.json  physiological_feature_analysis.json  physiological_final_results.json  physiological_graph_results.json  results.json  shap_feature_importance.json  simple_sharpness_lbp_results.json  stacked_crnn_results.json  traditional_ml_proper_results.json  traditional_ml_results.json  xceptionnet_proper_results.json
results/experiments/: baseline_results.json  deepfake_detection_crnn_improved_results.json  enhanced_deepfake_results.json  face_texture_results.json  hybrid_results.json  physiological_advanced_results.json  physiological_best_results.json  physiological_enhanced_results.json  physiological_enhanced_shap.json  physiological_ensemble_results.json  physiological_feature_importance_shap.json  results.json  (+10 more)
scripts/: run_ablation_study.py  run_graph_consistency.py  run_learning_curves.py
src/: crnn_stacked.py  efficientnet_crnn.py  physio_detection.py  physio_ensemble_v1.py  visual_baseline.py  xceptionnet_proper.py
(+4 files in other folders)
