[project]
name = "physio-deepfake"
version = "0.1.0"
description = "Physiological Deepfake Detection on Small Datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.67.3",
    "tensorflow==2.15.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.25.0",
]
